--- a/client/config/client.conf.template
+++ b/client/config/client.conf.template
@@ -4,24 +4,15 @@
     #ifconfig @ip @mask
     port @port
     remote @server
-    #route @vpnServerPrivateIP @mask 192.168.100.2
-    key /etc/openvpn/@keyname
-    #tls-remote @server
 
     # these are default for all connections
 
+    # change: for better performance on slow lines
+    # we switch off encryption here
 
-    proto udp
-    #mode client
-    float
-    tls-client
-    #persist-key
-    #persist-tun
-    #ping 15
+    cipher none
+
+    secret /etc/openvpn/ta.key
+    proto udp4
+    ping 15
     verb 4
-    ca /etc/openvpn/vpn-ca.pem
-    cert /etc/openvpn/client1_cert.pem
-    status /var/log/openvpn/status.log
-    status-version 1
-
-	# TODO configure for video streaming
